--- a/notes/多线程/线程安全.md
+++ b/notes/多线程/线程安全.md
@@ -67,6 +67,8 @@ public class ThreadClient {
 77
 ```
 
+分析：先来分析incrementCount()方法的count++这个操作，进入这个方法之后首先进行循环，然后读取count的值，然后修改count的值，最后把修改后的值赋值给count，总共包含3个过程：“读取” -> "修改" -> "赋值"。这个过程如果是单线程运行起来确实没有任何问题，但是当出现多线程并发访问这个方法是时候，可能线程1读取了count的值，线程2也读取了count的值，然后线程1、线程2分别进行了修改操作，最后赋值给count，那么这个时候count的值是最后一次赋值给count的线程修改的值，这并不是我们预期的。
+
 **线程安全**，是当多线程访问时，采用加锁机制，当一个线程访问该类的某个数据时，进行保护，其他线程不能进行访问直到该线程读取完毕，其他线程才可以使用，不会出现数据不一致或者数据污染的问题。
 
 改造上面线程不安全代码的RunnableDemo.java
@@ -97,10 +99,60 @@ public class RunnableDemo {
 }
 ```
 
+分析：上面incrementCount()方法中只有两个地方需要做数据同步，1：count++；2：读取count的值
 
+所以，对这两部操作加锁进行同步。
+
+还可以使用volatile来修饰count，就不需要对读取count的操作进行同步了
+
+```
+public class RunnableDemo {
+
+    private volatile long count;
+
+    private Lock lock = new ReentrantLock();
+
+    public void incrementCount() {
+        for (int i = 0; i < 10; i++) {
+            lock.lock();
+            try {
+                count++;
+            } finally {
+                lock.unlock();
+            }
+            System.out.println(count);
+            try {
+                TimeUnit.MILLISECONDS.sleep(500);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+
+分析：volatile包证了读取到的值是内存中最新的值，写的值立即刷新到内存中。
 
 ### 二、为什么会有线程安全问题
 
 线程安全问题一般都是由全局变量或静态变量引起的。
 
 若每个线程中对全局变量、静态变量只有读操作，而无写操作，一般来说，这个全局变量是线程安全的；若是有多个线程同时执行写操作，一般都需要考虑线程同步，否则的话可能有线程安全问题。
+
+### 三、如何确保线程安全
+
+1. synchronized
+
+   synchronized关键字，就是用来控制线程同步的，保证我们的线程在多线程环境下，不被多个线程同时执行，确保我们数据的完整性。
+
+2. Lock
+
+   Lock是在Java1.6被引入进来的，Lock的引入让锁有了可操作性，我们在需要的时候去手动的获取锁和释放锁，甚至我们还可以中断获取以及超时获取的同步特性。
+
+   Lock获取锁的几种方式：
+
+   * lock()  如果拿不到锁，就一直处于等待昨天，知道拿到锁。
+   * tryLock()  有一个boolean的返回值，如果没有拿到锁，直接返回false，停止等待
+   * tryLock(long timeout, TimeUnit unit)  获取锁时，给定在超时时间内获取成功，返回true，否则返回false
+
+3. 使用线程安全的类
