docker && docker compose

--- a/notes/多线程/线程安全.md
+++ b/notes/多线程/线程安全.md
@@ -131,7 +131,7 @@ public class RunnableDemo {
 }
 ```
 
-分析：volatile包证了读取到的值是内存中最新的值，写的值立即刷新到内存中。
+分析：volatile保证了读取到的值是内存中最新的值，写的值立即刷新到内存中。
 
 ### 二、为什么会有线程安全问题
 
@@ -151,7 +151,7 @@ public class RunnableDemo {
 
    Lock获取锁的几种方式：
 
-   * lock()  如果拿不到锁，就一直处于等待昨天，知道拿到锁。
+   * lock()  如果拿不到锁，就一直处于等待昨天，直到拿到锁。
    * tryLock()  有一个boolean的返回值，如果没有拿到锁，直接返回false，停止等待
    * tryLock(long timeout, TimeUnit unit)  获取锁时，给定在超时时间内获取成功，返回true，否则返回false
 
